--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 									    Data Exploration</a></h2>
 									</header>
 									<a href="https://github.com/Kalaivani-Dhanabal/Portfolio_Projects/blob/main/Portfolio_Projects_COVID_Data_Exploration.sql" class="image fit"><img src="images/coviddata .jpg" alt="" /></a>
-									<p>>In this project we use MySQL Server to explore global COVID 19 data.</p>
+									<p>In this project we use MySQL Server to explore global COVID 19 data.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Kalaivani-Dhanabal/Portfolio_Projects/blob/main/Portfolio_Projects_COVID_Data_Exploration.sql" class="button">View Project</a></li>
 									</ul>
@@ -101,7 +101,7 @@
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">(317)796-1894</a></p>
+								<p><a href="#">(317) 796-1894</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
